# MIDIPlayer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
MIDIPlayer/: MIDIPlayer.vcxproj  MIDIPlayer.vcxproj.filters  Patch.txt  Pitch.txt  main.cpp  midiplayer.cpp  midiplayer.h  stdafx.h
MinGW/: build.cmd
Source/: Pitch.txt  main.cpp  midiplayer.cpp  midiplayer.h  notation.cpp  notation.h  parse.cpp  parse.h  test.cpp
VS2017/: MIDIPlayer.sln
VS2017/MIDIPlayer/: MIDIPlayer.vcxproj  MIDIPlayer.vcxproj.filters  NumberedNotation.txt
VS2017/portmidi/: portmidi.vcxproj  portmidi.vcxproj.filters
VS2017/portsmf/: portsmf.vcxproj  portsmf.vcxproj.filters
